# preactions

./: .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml  tox.ini
.github/workflows/: tests.yml
tests/: test_xxxx.py
