[tool.poetry]
name = "prectest"
version = "0.1.0"
description = ""
authors = ["amisonnet8 <amisonnet8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
black = "^23.7.0"
ruff = "^0.0.284"
mypy = "^1.5.0"
nox = "^2023.4.22"
pre-commit = "^3.3.3"
sphinx = "^7.1.2"
tox = "^4.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py311"]
line-length = 88

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
